--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
+    "mongodb": "^6.20.0",
     "next": "16.0.1",
     "ogl": "^1.0.11",
     "posthog-js": "^1.284.0",
